; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_has_work.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_has_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt = type { i32 }
%struct.bnxt_cp_ring_info = type { %struct.tx_cmp**, i32 }
%struct.tx_cmp = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnxt*, %struct.bnxt_cp_ring_info*)* @bnxt_has_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnxt_has_work(%struct.bnxt* %0, %struct.bnxt_cp_ring_info* %1) #0 {
  %3 = alloca %struct.bnxt*, align 8
  %4 = alloca %struct.bnxt_cp_ring_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.tx_cmp*, align 8
  store %struct.bnxt* %0, %struct.bnxt** %3, align 8
  store %struct.bnxt_cp_ring_info* %1, %struct.bnxt_cp_ring_info** %4, align 8
  %8 = load %struct.bnxt_cp_ring_info*, %struct.bnxt_cp_ring_info** %4, align 8
  %9 = getelementptr inbounds %struct.bnxt_cp_ring_info, %struct.bnxt_cp_ring_info* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @RING_CMP(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load %struct.bnxt_cp_ring_info*, %struct.bnxt_cp_ring_info** %4, align 8
  %14 = getelementptr inbounds %struct.bnxt_cp_ring_info, %struct.bnxt_cp_ring_info* %13, i32 0, i32 0
  %15 = load %struct.tx_cmp**, %struct.tx_cmp*** %14, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @CP_RING(i32 %16)
  %18 = getelementptr inbounds %struct.tx_cmp*, %struct.tx_cmp** %15, i64 %17
  %19 = load %struct.tx_cmp*, %struct.tx_cmp** %18, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i64 @CP_IDX(i32 %20)
  %22 = getelementptr inbounds %struct.tx_cmp, %struct.tx_cmp* %19, i64 %21
  store %struct.tx_cmp* %22, %struct.tx_cmp** %7, align 8
  %23 = load %struct.tx_cmp*, %struct.tx_cmp** %7, align 8
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @TX_CMP_VALID(%struct.tx_cmp* %23, i32 %24)
  ret i32 %25
}

declare dso_local i32 @RING_CMP(i32) #1

declare dso_local i64 @CP_RING(i32) #1

declare dso_local i64 @CP_IDX(i32) #1

declare dso_local i32 @TX_CMP_VALID(%struct.tx_cmp*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
